Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 4.7.3
-
Fix Version/s: 4.7.4
-
Component/s: (Inactive) EGL/Symbian
-
Labels:None
-
Commits:8fb90ce32dde5d4045c23ff44f29d19054db0d9b
Description
QSymbianGraphcisSystemEx::hasBCM2727() uses bool QApplicationPrivate::useTranslucentEGLSurfaces to decide if Symbian is running on BCM2727 chip which is not entirely correct.
bool QApplicationPrivate::useTranslucentEGLSurfaces should actually be assigned according to QSymbianGraphcisSystemEx::hasBCM2727() and QSymbianGraphcisSystemEx::hasBCM2727() should be
also static function.