Fix for BCM2727 chip detection on Symbian

QSymbianGraphcisSystemEx::hasBCM2727() uses
bool QApplicationPrivate::useTranslucentEGLSurfaces to decide if
Symbian is running on BCM2727 chip which is not entirely correct.

bool QApplicationPrivate::useTranslucentEGLSurfaces should be
assigned according to QSymbianGraphcisSystemEx::hasBCM2727()
and QSymbianGraphcisSystemEx::hasBCM2727() should be
also static function.

Task-number: QTBUG-19578
Reviewed-by: Laszlo Agocs